feat: mood entry refactor and authentication