@@ -1,7 +1,7 @@
 package dev.iainkirkham.mental_planner_backend.mood;
 
 import dev.iainkirkham.mental_planner_backend.exception.ResourceNotFoundException;
-import dev.iainkirkham.mental_planner_backend.mood.dto.MoodEntryCreationDTO;
+import dev.iainkirkham.mental_planner_backend.mood.dto.MoodEntryRequestDTO;
 import dev.iainkirkham.mental_planner_backend.mood.dto.MoodEntryResponseDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,13 +13,16 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class MoodEntryControllerTest {
@@ -30,111 +33,123 @@ class MoodEntryControllerTest {
     @InjectMocks
     private MoodEntryController moodEntryController;
 
-    private MoodEntry testMoodEntry;
+    private static final Instant FIXED_NOW = Instant.parse("2025-12-01T00:00:00Z");
 
     // Test data representing different mood entry scenarios
-    private MoodEntryCreationDTO testCreationDTO;
-    private MoodEntryResponseDTO testResponseDTO;
+    private MoodEntryRequestDTO testRequestDTO;
+    private MoodEntryResponseDTO savedResponseDTO;
     private MoodEntryResponseDTO updatedResponseDTO;
+
+    // Test userId for consistent authentication context (not exposed in DTOs)
+    private static final String TEST_USER_ID = "user_test123";
 
     /**
      * Initializes test data before each test execution.
-     *
      * Creates realistic test objects representing:
-     * - Client mood entry input with factors and notes
-     * - Service layer responses with generated IDs
+     * - Client request DTO with factors and notes (no userId/ID)
+     * - Service layer response DTOs with generated IDs
      * - Update scenarios with improved mood states
-     *
      * Fresh objects prevent test interference and ensure isolation.
+     *
+     * Note: userId is automatically set by the service layer via AuthenticationContext,
+     * and is NOT exposed in DTOs for security.
      */
     @BeforeEach
     void setUp() {
         // Simulates challenging day mood entry from client
-        testCreationDTO = new MoodEntryCreationDTO();
-        testCreationDTO.setMoodScore((short) 4);
-        testCreationDTO.setDateTime(Instant.now());
-        testCreationDTO.setFactors(Arrays.asList("Work", "Stress"));
-        testCreationDTO.setNotes("Had a tough day.");
+        testRequestDTO = new MoodEntryRequestDTO();
+        testRequestDTO.setMoodScore((short) 4);
+        testRequestDTO.setDateTime(FIXED_NOW);
+        testRequestDTO.setFactors(List.of("Work", "Stress"));
+        testRequestDTO.setNotes("Had a tough day.");
 
         // Expected service response after successful creation
-        testResponseDTO = new MoodEntryResponseDTO();
-        testResponseDTO.setId(1L);
-        testResponseDTO.setMoodScore((short) 4);
-        testResponseDTO.setDateTime(Instant.now());
-        testResponseDTO.setFactors(Arrays.asList("Work", "Stress"));
-        testResponseDTO.setNotes("Had a tough day.");
+        savedResponseDTO = new MoodEntryResponseDTO();
+        savedResponseDTO.setId(1L);
+        savedResponseDTO.setMoodScore((short) 4);
+        savedResponseDTO.setDateTime(FIXED_NOW);
+        savedResponseDTO.setFactors(List.of("Work", "Stress"));
+        savedResponseDTO.setNotes("Had a tough day.");
 
         // Improved mood state for update testing
         updatedResponseDTO = new MoodEntryResponseDTO();
         updatedResponseDTO.setId(1L);
         updatedResponseDTO.setMoodScore((short) 5);
-        updatedResponseDTO.setDateTime(Instant.now().plusSeconds(10));
-        updatedResponseDTO.setFactors(Arrays.asList("Achievement", "Relaxation"));
+        updatedResponseDTO.setDateTime(FIXED_NOW.plusSeconds(10));
+        updatedResponseDTO.setFactors(List.of("Achievement", "Relaxation"));
         updatedResponseDTO.setNotes("Feeling fantastic after finishing the task!");
     }
 
     @Test
     void createMoodEntry_ShouldReturnCreatedMoodEntry() {
         // Arrange: Mock service to simulate successful creation
-        when(moodEntryService.createMoodEntry(any(MoodEntryCreationDTO.class))).thenReturn(testResponseDTO);
+        when(moodEntryService.createMoodEntry(any(MoodEntryRequestDTO.class))).thenReturn(savedResponseDTO);
 
         // Act: Call controller creation endpoint
-        ResponseEntity<MoodEntryResponseDTO> response = moodEntryController.createMoodEntry(testCreationDTO);
+        ResponseEntity<MoodEntryResponseDTO> response = moodEntryController.createMoodEntry(testRequestDTO);
 
         // Assert: Verify creation success and data integrity
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getId()).isEqualTo(testResponseDTO.getId());
-        assertThat(response.getBody().getMoodScore()).isEqualTo(testResponseDTO.getMoodScore());
-        assertThat(response.getBody().getNotes()).isEqualTo(testResponseDTO.getNotes());
-        // Verify that the service method was called
-        verify(moodEntryService, times(1)).createMoodEntry(testCreationDTO);
+        assertThat(response.getBody())
+                .isNotNull()
+                .usingRecursiveComparison()
+                .isEqualTo(savedResponseDTO);
+        verify(moodEntryService).createMoodEntry(testRequestDTO);
     }
 
     @Test
     void getAllMoodEntries_ShouldReturnAllMoodEntries() {
         // Arrange: Mock service to return multiple mood entries
-        List<MoodEntryResponseDTO> expectedDtos = Arrays.asList(testResponseDTO, new MoodEntryResponseDTO()); // Add another dummy DTO
-        when(moodEntryService.getAllMoodEntries()).thenReturn(expectedDtos);
+        MoodEntryResponseDTO secondEntry = new MoodEntryResponseDTO();
+        secondEntry.setId(2L);
+        secondEntry.setMoodScore((short) 3);
+        secondEntry.setDateTime(FIXED_NOW.plusSeconds(7200));
+        List<MoodEntryResponseDTO> expectedEntries = List.of(savedResponseDTO, secondEntry);
+        when(moodEntryService.getAllMoodEntries()).thenReturn(expectedEntries);
 
-        // Act: Call controller list endpoint
-        ResponseEntity<List<MoodEntryResponseDTO>> response = moodEntryController.getAllMoodEntries();
+        // Act: Call controller list endpoint (with null dates = get all)
+        ResponseEntity<List<MoodEntryResponseDTO>> response = moodEntryController.getAllMoodEntries(null, null);
 
         // Assert: Verify response structure and content
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody()).hasSize(2);
-        assertThat(response.getBody().get(0).getId()).isEqualTo(testResponseDTO.getId());
-        verify(moodEntryService, times(1)).getAllMoodEntries();
+        assertThat(response.getBody())
+                .isNotNull()
+                .hasSize(2)
+                .first()
+                .usingRecursiveComparison()
+                .isEqualTo(savedResponseDTO);
+        verify(moodEntryService).getAllMoodEntries();
     }
 
     @Test
     void getAllMoodEntries_ShouldReturnNoContentWhenEmpty() {
         // Arrange: Mock service to return empty collection
-        when(moodEntryService.getAllMoodEntries()).thenReturn(Collections.emptyList());
+        when(moodEntryService.getAllMoodEntries()).thenReturn(List.of());
 
         // Act: Call controller list endpoint
-        ResponseEntity<List<MoodEntryResponseDTO>> response = moodEntryController.getAllMoodEntries();
+        ResponseEntity<List<MoodEntryResponseDTO>> response = moodEntryController.getAllMoodEntries(null, null);
 
         // Assert: Verify empty response handling
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
         assertThat(response.getBody()).isNull();
-        verify(moodEntryService, times(1)).getAllMoodEntries();
+        verify(moodEntryService).getAllMoodEntries();
     }
 
     @Test
     void getMoodEntryById_ShouldReturnMoodEntryWhenFound() {
         // Arrange: Mock service to return specific mood entry
-        when(moodEntryService.getMoodEntryById(anyLong())).thenReturn(testResponseDTO);
+        when(moodEntryService.getMoodEntryById(anyLong())).thenReturn(savedResponseDTO);
 
         // Act: Call controller get-by-id endpoint
         ResponseEntity<MoodEntryResponseDTO> response = moodEntryController.getMoodEntryById(1L);
 
         // Assert: Verify successful retrieval
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getId()).isEqualTo(testResponseDTO.getId());
-        verify(moodEntryService, times(1)).getMoodEntryById(1L);
+        assertThat(response.getBody())
+                .isNotNull()
+                .usingRecursiveComparison()
+                .isEqualTo(savedResponseDTO);
+        verify(moodEntryService).getMoodEntryById(1L);
     }
 
     @Test
@@ -142,38 +157,37 @@ class MoodEntryControllerTest {
         // Arrange: Mock service to throw not found exception
         when(moodEntryService.getMoodEntryById(anyLong())).thenThrow(new ResourceNotFoundException("Not found"));
 
-        // Act & Assert: Expect the controller to propagate the 404 status via @ResponseStatus
-        // Spring's default exception handling will convert ResourceNotFoundException to 404
+        // Act & Assert: Verify exception propagates to Spring's exception handler
         assertThrows(ResourceNotFoundException.class, () -> moodEntryController.getMoodEntryById(99L));
-        verify(moodEntryService, times(1)).getMoodEntryById(99L);
+        verify(moodEntryService).getMoodEntryById(99L);
     }
 
     @Test
     void updateMoodEntry_ShouldReturnUpdatedMoodEntryWhenFound() {
         // Arrange: Mock service to return updated mood entry
-        when(moodEntryService.updateMoodEntry(anyLong(), any(MoodEntryCreationDTO.class))).thenReturn(updatedResponseDTO);
+        when(moodEntryService.updateMoodEntry(anyLong(), any(MoodEntryRequestDTO.class))).thenReturn(updatedResponseDTO);
 
         // Act: Call controller update endpoint
-        ResponseEntity<MoodEntryResponseDTO> response = moodEntryController.updateMoodEntry(1L, testCreationDTO); // Using testCreationDTO as update input
+        ResponseEntity<MoodEntryResponseDTO> response = moodEntryController.updateMoodEntry(1L, testRequestDTO);
 
         // Assert: Verify update success and data changes
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getId()).isEqualTo(updatedResponseDTO.getId());
-        assertThat(response.getBody().getMoodScore()).isEqualTo(updatedResponseDTO.getMoodScore());
-        assertThat(response.getBody().getNotes()).isEqualTo(updatedResponseDTO.getNotes());
-        verify(moodEntryService, times(1)).updateMoodEntry(1L, testCreationDTO);
+        assertThat(response.getBody())
+                .isNotNull()
+                .usingRecursiveComparison()
+                .isEqualTo(updatedResponseDTO);
+        verify(moodEntryService).updateMoodEntry(1L, testRequestDTO);
     }
 
     @Test
     void updateMoodEntry_ShouldReturnNotFoundWhenNotFound() {
         // Arrange: Mock service to throw exception for missing resource
-        when(moodEntryService.updateMoodEntry(anyLong(), any(MoodEntryCreationDTO.class)))
+        when(moodEntryService.updateMoodEntry(anyLong(), any(MoodEntryRequestDTO.class)))
                 .thenThrow(new ResourceNotFoundException("Not found for update"));
 
         // Act & Assert: Verify exception handling
-        assertThrows(ResourceNotFoundException.class, () -> moodEntryController.updateMoodEntry(99L, testCreationDTO));
-        verify(moodEntryService, times(1)).updateMoodEntry(99L, testCreationDTO);
+        assertThrows(ResourceNotFoundException.class, () -> moodEntryController.updateMoodEntry(99L, testRequestDTO));
+        verify(moodEntryService).updateMoodEntry(99L, testRequestDTO);
     }
 
     @Test
@@ -186,7 +200,7 @@ class MoodEntryControllerTest {
 
         // Assert: Verify successful deletion response
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-        verify(moodEntryService, times(1)).deleteMoodEntry(1L);
+        verify(moodEntryService).deleteMoodEntry(1L);
     }
 
     @Test
@@ -196,6 +210,6 @@ class MoodEntryControllerTest {
 
         // Act & Assert: Verify exception handling
         assertThrows(ResourceNotFoundException.class, () -> moodEntryController.deleteMoodEntry(99L));
-        verify(moodEntryService, times(1)).deleteMoodEntry(99L);
+        verify(moodEntryService).deleteMoodEntry(99L);
     }
 }
